# 2048

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
